--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ description: A blog about lorem ipsum dolor sit amet
 username: CyberCelt
 user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
 user_title: Ramblings of an aspiring Red Teamer
-email: anon@anon.com
+email: David@redteaming.org
 twitter_username: lorem_ipsum
-github_username:  lorem_ipsum
+github_username:  Cyb3rC3lt
 gplus_username:  lorem_ipsum
 
 # Google-analytics
