--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: A blog about lorem ipsum dolor sit amet
 
 # User settings
 username: CyberCelt
-user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
+user_description: Currently working as a Penetration Tester hacking Web apps, mobile and internal infrastructure systems. Busily studying all things Red Teaming behind the scenes. 
 user_title: Ramblings of an aspiring Red Teamer
 email: David@redteaming.org
 twitter_username: lorem_ipsum
