--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: A blog about lorem ipsum dolor sit amet
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: CyberCelt
+username: RedTeaming
 user_description: Currently working as a Penetration Tester hacking Web apps, mobile and internal infrastructure systems. Busily studying all things Red Teaming behind the scenes. 
 user_title: Ramblings of an aspiring Red Teamer
 email: David@redteaming.org
