--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 title: Red Teaming
-description: A blog about Red Teaming
+description: Red Teaming Blog
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "https://redteaming.org" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 username: RedTeaming
-user_description: Currently working as a Penetration Tester hacking Web apps, mobile and internal infrastructure systems. Busily studying all things Red Teaming behind the scenes. 
-user_title: Ramblings of an aspiring    Red Teamer
+user_description: Currently working as a Penetration Tester hacking web apps, mobile and internal infrastructure systems. Busily studying all things Red Teaming in my spare time. 
+user_title: Ramblings of an aspiring Red Teamer
 email: David@redteaming.org
 twitter_username: lorem_ipsum
 github_username:  Cyb3rC3lt
