--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: Red Teaming Blog
 # url: "https://redteaming.org" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: RedTeaming
+username: Red&nbsp;Teaming
 user_description: Currently working as a Penetration Tester hacking web apps, mobile and internal infrastructure systems. Busily studying all things Red Teaming in my spare time. 
 user_title: Ramblings of an aspiring Red Teamer
 email: David@redteaming.org
