--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: Red Teaming Blog
 # User settings
 username: Red&nbsp;Teaming
 user_description: Currently working as a Penetration Tester hacking web apps, mobile and internal infrastructure systems. Busily studying all things Red Teaming in my spare time. 
-user_title: Ramblings of an aspiring Red Teamer
+user_title: Ramblings of an aspiring <br>Red Teamer
 email: David@redteaming.org
 twitter_username: lorem_ipsum
 github_username:  Cyb3rC3lt
