--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,4 @@
-# Site settings
-title: Red Teaming
-description: Red Teaming Blog
-# baseurl: "/" # the subpath of your site, e.g. /blog
-# url: "https://redteaming.org" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
-
+# Welcome to Jekyll!
 # User settings
 username: Red&nbsp;Teaming
 user_description: Currently working as a Penetration Tester hacking web apps, mobile and internal infrastructure systems. Busily studying all things Red Teaming in my spare time. 
@@ -18,3 +13,39 @@ google-analytics:
   id: ""
 
 exclude: ['package.json', 'src' , 'node_modules']
+
+title: Your awesome title
+email: your-email@example.com
+description: >- # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "/_site" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: jekyllrb
+github_username:  jekyll
+
+# Build settings
+theme: minima
+plugins:
+  - jekyll-feed
+
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
