--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ google-analytics:
 exclude: ['package.json', 'src' , 'node_modules']
 
 title: Red Teaming
-description: All things Red Teaming
+description: All things Red Teaming from course reviews to tips and tricks
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
