--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,10 @@
 # Welcome to Jekyll!
 # User settings
 username: Red&nbsp;Teaming
-user_description: Currently working as a Penetration Tester hacking web apps, mobile and internal infrastructure systems. Busily studying all things Red Teaming in my spare time. 
+user_description: Currently working as a Penetration Tester hacking web apps, mobile, WiFi and network infrastructure systems. Busily studying all things Red Teaming in my spare time. 
 user_title: Ramblings of an aspiring <br>Red Teamer
 email: David@redteaming.org
-twitter_username: lorem_ipsum
 github_username:  Cyb3rC3lt
-gplus_username:  lorem_ipsum
 
 # Google-analytics
 google-analytics:
@@ -17,9 +15,7 @@ exclude: ['package.json', 'src' , 'node_modules']
 title: Red Teaming
 description: All things Red Teaming from course reviews to tips and tricks
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://redteaming.org" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: minima
