--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Welcome to Jekyll!
 # User settings
 username: Red&nbsp;Teaming
-user_description: Currently working as a Penetration Tester hacking web apps, mobile, WiFi and network infrastructure systems. Busily studying all things Red Teaming in my spare time. 
+user_description: Formerly working in a non security role in IT after which I then took a 6 month career break to attain the OSCP. <br><br>Currently working as a Penetration Tester hacking web apps, mobile, WiFi and network infrastructure systems. Busily studying all things Red Teaming in my spare time. 
 user_title: Ramblings of an aspiring <br>Red Teamer
 email: David@redteaming.org
 github_username:  Cyb3rC3lt
