--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ google-analytics:
 
 exclude: ['package.json', 'src' , 'node_modules']
 
-title: All things Red Teaming
+title: Red Teaming
 description: All things Red Teaming from course reviews to tips and tricks
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://redteaming.org" # the base hostname & protocol for your site, e.g. http://example.com
