--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Welcome to Jekyll!
 # User settings
 username: Red&nbsp;Teaming
-user_description: Formerly worked in a non security IT role for 15 years where I then undertook a career change into Cyber Security. <br><br>Currently working in Adversarial Simulation hacking Azure, Physical, WiFi and Network Infrastructure systems. Busily studying all things Red Teaming in my spare time. <br><br>This Blog will highlight what I learn whilst Pentesting on my way to becoming a Red Team Operator.
+user_description: Formerly worked in a non security based IT role for 15 years where I then undertook a career change into Cyber Security. <br><br>Currently working in Adversarial Simulation hacking Azure, Physical, WiFi and Network Infrastructure systems. Busily studying all things Red Teaming in my spare time. <br><br>This Blog will highlight what I learn whilst Pentesting on my way to becoming a Red Team Operator.
 user_title: Ramblings of an aspiring <br>Red Teamer
 email: David@redteaming.org
 github_username:  Cyb3rC3lt
